[feat] Add scripts and change manifest.json

--- a/GithubCommitsVisualizer/GithubCommitsVisualizer.csproj
+++ b/GithubCommitsVisualizer/GithubCommitsVisualizer.csproj
@@ -41,6 +41,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="app\img\icon.png" />
+    <Content Include="app\js\jquery-3.3.1.min.js" />
+    <Content Include="app\js\script.js" />
     <Content Include="app\popup.html" />
     <Content Include="app\popup.js" />
     <Content Include="Properties\build\lib\Ionic.Zip.DLL" />
