--- a/GithubCommitsVisualizer/app/manifest.json
+++ b/GithubCommitsVisualizer/app/manifest.json
@@ -1,15 +1,27 @@
 {
-  "manifest_version": 2,
+    "manifest_version": 2,
+    
+    "name": "Github Commits Visualizer",
+    "short_name": "Commits Viz",
+    "description": "This extension visualizes commits like Contributions.",
+    "version": "1.0",
 
-  "name": "One-click Kittens",
-  "description": "This extension demonstrates a browser action with kittens.",
-  "version": "1.0",
 
-  "permissions": [
-    "https://secure.flickr.com/"
-  ],
-  "browser_action": {
-    "default_icon": "img/icon.png",
-    "default_popup": "popup.html"
-  }
+    "permissions": [
+      "https://secure.flickr.com/"
+    ],
+    "content_scripts": [
+        {
+            "matches": [ "https://github.com/*" ],
+            "exclude_matches": [
+                "https://github.com/*/*",
+                "https://github.com/*?*"
+            ],
+            "js": [
+                "js/jquery-3.3.1.min.js",
+                "js/script.js"
+            ],
+            "run_at": "document_end"
+        }
+    ]
 }
